--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@solana/pay": "0.2.5",
-    "@solana/spl-token": "^0.3.11",
-    "@solana/web3.js": "1.92.3",
+    "@solana/spl-token": "^0.4.9",
+    "@solana/web3.js": "^1.95.8",
     "@supabase/supabase-js": "^2.45.4",
     "@tanstack/react-table": "^8.11.3",
     "@tremor/react": "^3.13.4",
