--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.3.4",
     "@next/bundle-analyzer": "^15.1.5",
-    "@planetscale/database": "^1.13.0",
     "@privy-io/react-auth": "^2.4.2",
     "@privy-io/server-auth": "^1.18.11",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -41,16 +40,14 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@solana/kit": "^2.3.0",
     "@solana/pay": "0.2.5",
-    "@solana/spl-token": "^0.4.9",
-    "@solana/web3.js": "^1.95.8",
+    "@solana/spl-token": "^0.4.14",
+    "@solana/web3.js": "^1.98.4",
     "@supabase/supabase-js": "^2.45.4",
-    "@tanstack/react-table": "^8.11.3",
     "@tremor/react": "^3.13.4",
-    "@uploadthing/react": "^6.1.0",
     "@upstash/redis": "^1.34.8",
     "bcryptjs": "^2.4.3",
-    "browser-image-compression": "^2.0.2",
     "bs58": "^5.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -58,6 +55,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.3",
+    "framer-motion": "^12.23.6",
     "json2csv": "^6.0.0-alpha.2",
     "jspdf": "^2.5.2",
     "lodash": "^4.17.21",
@@ -75,6 +73,7 @@
     "react-hook-form": "^7.49.2",
     "react-pin-input": "^1.3.1",
     "react-qrcode-logo": "^2.9.0",
+    "react-type-animation": "^3.2.0",
     "sharp": "^0.33.5",
     "sonner": "^1.3.1",
     "stripe": "^14.23.0",
@@ -82,8 +81,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.1.1",
     "vaul": "^0.8.9",
-    "zod": "^3.23.8",
-    "zustand": "^5.0.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
