--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.3.4",
     "@next/bundle-analyzer": "^15.1.5",
-    "@privy-io/react-auth": "^2.4.2",
+    "@privy-io/react-auth": "2.24.0",
     "@privy-io/server-auth": "^1.18.11",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
